<resources>
    <string name="app_name">Точки</string>
    <string name="undo">Отмена</string>
    <string name="clear">Заново</string>
    <string name="continue_btn">Продолжить</string>
    <string name="new_game_btn">Новая игра</string>
    <string name="menu_header">Добро пожаловать!</string>
    <string name="width_text">Ширина: %1$d</string>
    <string name="height_text">Высота: %1$d</string>
    <string name="game_over">Игра окончена</string>
    <string name="retry">Заново</string>
    <string name="to_menu">В меню</string>
    <string name="player_win">%1$s победил!</string>
    <string name="players_sep">" vs "</string>
    <string name="score">%1$d:%2$d</string>
    <string name="draw">Ничья</string>
    <string name="undo_to_beginning">Вы долистали до начала Всего</string>
    <string name="rules_title">Правила</string>
    <string name="intro">Игра ведётся на плоском поле, разделённом параллельными и перпендикулярными линиями на равного размера клетки. Игроки поочерёдно ставят точки двух цветов в перекрестия этих линий, называемые пунктами. Пункт, в который поставлена точка, остаётся занятым до конца игры, перемещать ранее поставленные точки или снимать их с поля нельзя. Все пункты на поле равнозначны. Край поля является ограничивающим фактором, непосредственного участия в игровом процессе не принимает.</string>
    <string name="target_title">Цель игры</string>
    <string name="target">Целью игры является окружение точек соперника. Окружение — это создание на определённом участке игрового поля области, замкнутой внутри непрерывной непересекающейся цепи точек одного цвета, отстоящих друг от друга не более, чем на одну клетку по горизонтали, вертикали или диагонали. При этом в данной области в момент замыкания обязательно должны находиться точки другого цвета (одна или более). В таком случае область закрашивается в цвет создавших окружение точек, а точки соперника внутри неё выключаются из дальнейшей игры, считаясь захваченными, и идут в зачёт окружившему.</string>
    <string name="surroundings_title">Окружения</string>
    <string name="surroundings">Области окружения могут окружаться так же, как и отдельные точки. При этом, если первый игрок окружил область окружения второго, то точки первого игрока, находившиеся в области окружения второго, освобождаются и в зачёт второму игроку уже не идут.</string>
    <string name="traps_title">Ловушки</string>
    <string name="traps">Если замыкается область, внутри которой нет точек соперника, она называется «домиком» и не является окружением. Такая область не закрашивается, а в пустые пункты внутри неё можно ставить точки. Причём точки того же цвета, что и домик, можно ставить до тех пор, пока не закончатся пустые пункты. Если же в домик будет поставлена точка другого цвета, то в момент передачи хода область будет закрашена, а поставленная точка, соответственно, окружена. Исключением является тот случай, когда точка, поставленная в домик другого цвета, этим же ходом одновременно замыкает непрерывную цепь своего цвета, образуя окружение. Тогда она не окружается, а сама окружает часть домика.</string>
    <string name="game_ending_title">Конец игры</string>
    <string name="game_ending">Игра ведется до полного заполнения поля. Выигрывает игрок, во владении которого находится больше всего точек.</string>
    <string name="desc">Описание</string>
    <string name="history">История</string>
    <string name="first_player">Первый игрок</string>
    <string name="second_player">Второй игрок</string>
    <string name="clear_field_sure">Очистить поле?</string>
    <string name="irreplaceable">Это действие нельзя отменить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="clear_history_sure">Очистить историю?</string>
    <string name="history_already_clear">История уже очищена</string>
    <string name="field_already_clear">Поле уже пустое</string>
    <string name="new_game_sure">Начать новую игру?</string>
    <string name="save_will_be_removed">Текущее сохранение будет удалено</string>
    <string name="save_not_found">Сохранение не найдено</string>
    <string name="player_first_default">Игрок 1</string>
    <string name="player_second_default">Игрок 2</string>
</resources>
